

//错误消息
message ErrorMsgS2C{
	required int32 ErrorID = 1;
}

//重新连接C2S
message AgainConnectC2S{
	required uint64 SessionID = 1;	//老的SessionID
}

//重新连接S2C
message AgainConnectS2C{
	required uint64 SessionID = 1;	//新的SessionID
}

//其他客户端登录S2C
message OtherLoginS2C{
	
}

//连接成功S2C
message ConnectSuccessS2C{
	
}

//用户数据
message Person {
	required uint64 ID = 1;
	required string Name = 2;
	required int32 Money = 3;
	required uint64 SessionID = 4;
}

//用户登录C2S
message UserLoginC2S {
	required string UserName = 1;
}

//用户登录S2C
message UserLoginS2C {
	required uint64 UserID = 1;
}

//获取用户信息C2S
message GetUserInfoC2S {
	required uint64 UserID = 1;
}

//获取用户信息S2C
message GetUserInfoS2C {
	required Person UserInfo = 1;
}
